# bmo

./: Cargo.toml
src/: bot.rs  main.rs  preview.rs
src/hacker_news/: comment.rs  item.rs  mod.rs  previewer.rs  story.rs
src/util/: html_to_markdown.rs
tests/fixtures/hacker_news/: comment.json
tests/fixtures/hacker_news/html_to_markdown/: expected.markdown  input.html
