[package]
name = "bmo"
version = "0.0.1"
authors = ["Jorge Israel Peña <jorge.israel.p@gmail.com>"]

[dependencies]
dotenv = "0.10.1"
linkify = "0.1.2"
url = "1.5.1"
html5ever = "0.18.0"
reqwest = "0.7.1"
ctrlc = "3.0.2"

error-chain = "0.10.0"

# Slog by default removes trace level from debug builds and trace + debug from release.
slog = { version = "2.0.6", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.0.1"
slog-envlogger = "2.0.0"
slog-scope = "4.0.0"
slog-stdlog = "3.0.2"
slog-term = "2.0.2"

chrono = { version = "0.4.0", features = ["serde"] }
chrono-tz = "0.4.1"

serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"

# serenity = "0.3"
serenity = { git = "https://github.com/zeyla/serenity" }
# serenity = { path = "../serenity" }